syntax = "proto3";

package calculator;

option go_package = "calculatorpb";

message CalSumRequest {
  int32 first_number = 1;
  int32 second_number = 2;
}

message CalSumResponse {
  int32 result = 1;
}

message PrimeDecompositionRequest {
  int32 number = 1;
}

message PrimeDecompositionResponse {
  int32 result = 1;
}

message AverageRequest {
  int32 number = 1;
}

message AverageResponse {
  float result = 1;
}

message FindMaxRequest {
  int32 number = 1;
}

message FindMaxResponse {
  int32 result = 1;
}

message SquareRootRequest {
  int32 number = 1;
}

message SquareRootResponse {
  double square_root = 1;
}

service CalculatorService {
  // Unary API
  rpc CalSum(CalSumRequest) returns (CalSumResponse) {};

  // Server Streaming API
  rpc PrimeDecomposition(PrimeDecompositionRequest) returns (stream PrimeDecompositionResponse) {};

  // Client Streaming API
  rpc Average(stream AverageRequest) returns (AverageResponse) {};

  // Bidirectional Streaming API
  rpc FindMax(stream FindMaxRequest) returns (stream FindMaxResponse) {};

  // GRPC Error
  // This RPC will throw an exception if the sent number is negative
  // The err being sent is of type INVALID_ARGUMENT
  rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}